add query to get descussions
